--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "javacript utilities",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./src/test/test.js"
   },
   "repository": {
     "type": "git",
